K8s/descriptors/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yaml convert
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
  namespace: robot-shop
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: mongodb
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongodb
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: io.kompose.service
                operator: In
                values:
                - mongodb
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: linuxacademycontent/rs-mongodb:latest
        name: mongodb
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
status: {}
