K8s/descriptors/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yaml convert
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: ratings
  name: ratings
  namespace: robot-shop
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: ratings
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ratings
    spec:
      containers:
      - image: linuxacademycontent/rs-ratings:latest
        name: ratings
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
status: {}
