K8s/descriptors/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yaml convert
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: shipping
  name: shipping
  namespace: robot-shop
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: shipping
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: shipping
    spec:
      containers:
      - image: linuxacademycontent/rs-shipping:latest
        name: shipping
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
status: {}
