K8s/descriptors/robot-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-default
  namespace: robot-shop
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rawhideron.duckdns.org
      secretName: robot-shop-tls
  rules:
    - host: rawhideron.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-404
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-web
  namespace: robot-shop
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rawhideron.duckdns.org
      secretName: robot-shop-tls
  rules:
    - host: rawhideron.duckdns.org
      http:
        paths:
          - path: /web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /demo-web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-web
                port:
                  number: 8006
          - path: /css(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /js(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /media(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /fonts(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
